--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
