--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.15.1",
+    "i18next": "^23.4.5",
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.0",
     "react-icons": "^4.10.1",
     "sharp": "^0.32.4"
   },
